--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -19,7 +19,7 @@ modId="pridemoths" #mandatory
 # The version number of the mod - there's a few well known ${} variables useable here or just hardcode it
 # ${file.jarVersion} will substitute the value of the Implementation-Version as read from the mod's JAR file metadata
 # see the associated build.gradle script for how to populate this completely automatically during a build
-version="${file.jarVersion}" #mandatory
+version="1.7" #mandatory
  # A display name for the mod
 displayName="Happy Pride Moth!" #mandatory
 # A URL to query for updates for this mod. See the JSON update specification https://mcforge.readthedocs.io/en/latest/gettingstarted/autoupdate/
@@ -27,7 +27,7 @@ displayName="Happy Pride Moth!" #mandatory
 # A URL for the "homepage" for this mod, displayed in the mod UI
 #displayURL="https://change.me.to.your.mods.homepage.example.invalid/" #optional
 # A file name (in the root of the mod JAR) containing a logo for display
-logoFile="assets/pridemoths/icon.png" #optional
+logoFile="icon.png" #optional
 # A text field displayed in the mod UI
 # credits="Thanks for this example mod goes to Java" #optional
 # A text field displayed in the mod UI
@@ -66,6 +66,6 @@ description='''Love moths AND pride? Why not both!'''
     modId="geckolib" #mandatory
     mandatory=true #mandatory
 # This version range declares a minimum of the current minecraft version up to but not including the next major version
-    versionRange="[4.4,)" #mandatory
+    versionRange="[4.3.1,)" #mandatory
     ordering="NONE"
     side="BOTH"
